fix: remove all unwanted grid gaps

--- a/styles/case-study-layout.css
+++ b/styles/case-study-layout.css
@@ -92,7 +92,7 @@ footer .details * {
   .diagram .info {
     grid-column: 1 / -1;
     grid-template-columns: repeat(var(--master-column-count), 1fr);
-    grid-gap: var(--gutter);
+    grid-column-gap: var(--gutter);
   }
   
   .flow .illustration {
